@@ -8,7 +8,7 @@ PACKAGE=geda-gschem
 DATADIR=gEDA
 
 # new way of doing version
-VERSION=20020527
+VERSION=20020825
 
 echo Configuring gschem version $VERSION
 
