@@ -7,7 +7,7 @@ PACKAGE=geda-gsymcheck
 DATADIR=gEDA
 
 # new way of doing version
-VERSION=20020527
+VERSION=20020825
 
 echo Configuring gsymcheck version $VERSION
 
