@@ -1,3 +1,14 @@
+2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* noweb/x_attribedit.nw: Fixed the focus on the value entry to be
+	correct when labeling (naming) nets.
+
+	* noweb/x_attribedit.nw: Added the key binding for the Escape key
+
+	* noweb/x_fileselect.nw: Added the key binding for the Escape key
+
+	* src/Makefile.am: Remove x_attrsel.nw (obsolete file)
+	
 2002-08-18 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* noweb/o_grips.nw: Fixed a bug where searching for grips would stop
